[CRUD] Update course - Part 1

--- a/src/resourses/views/courses/create.hbs
+++ b/src/resourses/views/courses/create.hbs
@@ -1,4 +1,5 @@
 <div class='mt-4'>
+    <h2>Thêm khóa học</h2>
     <form method='post' action='/courses/save'>
         <div class='form-group'>
             <label for='name'>Tên khóa học</label>
