--- a/src/resourses/views/me/myCourses.hbs
+++ b/src/resourses/views/me/myCourses.hbs
@@ -1,6 +1,6 @@
 <div>
     <h3>Khoá học của tôi</h3>
-    <a href='/me/trash/courses'>Thùng rác</a>
+    <a href='/me/trash/courses'>Thùng rác({{coursesDelete}})</a>
 </div>
 
 <table class='table'>
