--- a/src/resourses/views/partials/header/header.hbs
+++ b/src/resourses/views/partials/header/header.hbs
@@ -1,6 +1,7 @@
 <nav class='navbar navbar-expand-lg bg-body-tertiary'>
     <div class='container'>
         <a class='navbar-brand' href='/'>HOME</a>
+        <a href='/login' type='button' class='btn btn-primary'>LOGIN</a>
         <button
             class='navbar-toggler'
             type='button'
